# hyperium-code-audit

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt  setup.py
.code_audit_history/: scans.jsonl
.github/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: security-scan.yml
docs/: index.html
docs/demos/: 01-scan-dashboard.html  02-taint-analysis.html  03-payment-scanner.html  (+4 more)
screenshots/: 01-main-dashboard.html  01_dashboard.html  02-findings-detail.html  02_taint_analysis.html  03-secrets-payment.html  03_payment_detection.html  04-dependencies.html  04_secrets_verification.html  05-compliance.html  05_trending.html
src/: __init__.py  api_security.py  ast_engine.py  checkpoint_manager.py  cli.py  compliance_mapper.py  config.py  custom_rules.py  dep_analyzer.py  engine.py  iac_scanner.py  incremental.py  js_ast_engine.py  models.py  pattern_scanner.py  payment_logic.py  payment_scanner.py  pdf_report.py  report_generator.py  sarif_exporter.py  scan_history.py  secret_detector.py  secret_verifier.py  taint_analyzer.py  triage_engine.py
templates/: bitbucket-pipelines.yml  github-actions-security-scan.yml  gitlab-ci.yml
tests/: conftest.py  test_api_security.py  test_cli.py  test_custom_rules.py  test_engine.py  test_exit_codes.py  test_iac.py  test_incremental.py  test_integration_v2.py  test_js_ast.py  test_models.py  test_pattern_scanner.py  test_payment_logic.py  test_payment_scanner.py  test_sarif.py  test_scan_history.py  test_secret_detector.py  test_secret_verifier.py  test_taint.py  test_triage.py
